# buckyos-base

./: .gitignore  README.md
doc/: addr-rtt-db.md  bns.md  resolve-did.md  test-design-name-system.md
src/: Cargo.toml
src/buckyos-kit/: Cargo.toml  build.rs
src/buckyos-kit/src/: channel.rs  event.rs  json.rs  lib.rs  log_util.rs  machine_config.rs  name_util.rs  path.rs  process.rs  provider.rs  serde_helper.rs  test_server.rs  time.rs
src/buckyos-kit/src/config/: dir.rs  merge.rs  mod.rs  test.rs
src/buckyos-tracing/: Cargo.toml  ROTATING_LOG.md
src/buckyos-tracing/examples/: rotating_log_example.rs
src/buckyos-tracing/src/: lib.rs  log_tracing.rs  rotating_log.rs
src/buckyos-tracing/tests/: rotating_log_test.rs
src/debug-lib/: Cargo.toml
src/debug-lib/src/: debug_config.rs  lib.rs
src/debug-lib/src/bug_report/: mod.rs
src/debug-lib/src/bug_report/notifier/: dingtalk.rs  http_reporter.rs  mod.rs
src/debug-lib/src/panic/: manager.rs  mod.rs  panic.rs
src/kRPC/: Cargo.toml
src/kRPC/src/: example_krpc_client.rs  lib.rs  protocol.rs  session_token.rs
src/name-client/: Cargo.toml
src/name-client/src/: addr_rtt_db.rs  bns_provider.rs  cloudflare.rs  config_provider.rs  dns_provider.rs  doc_cache.rs  https_provider.rs  lib.rs  local_ns_provider.rs  name_client.rs  name_query.rs  provider.rs  utility.rs
src/name-lib/: Cargo.toml
src/name-lib/src/: agent.rs  config.rs  device.rs  device_info.rs  did.rs  lib.rs  user.rs  utility.rs  zone.rs
src/rbac/: Cargo.toml
src/rbac/src/: lib.rs
