[workspace]
resolver = "2"

members = [
    "./name-lib",
    "./name-client",
    "./buckyos-kit",
    "./buckyos-tracing",
    "./debug-lib",
    "./kRPC",
    "./rbac",
]

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-recursion = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml_ng = "0.10"

# Logging and tracing
log = "0.4"
simplelog = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
tracing-appender = "0.2"
console-subscriber = "0.4"

# Error handling
thiserror = "1.0"

# System utilities
sysinfo = "0.31"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets","getrandom"] }
curve25519-dalek = "4.1"
ed25519_to_curve25519 = "0.2"
#openssl = { version = "0.10", features = ["vendored"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Encoding
base64 = "0.22"

# Time utilities
time = { version = "0.3", features = ["formatting"] }
chrono = "0.4"

# Data structures and caching
lazy_static = "1.5"
once_cell = "1.19"
mini-moka = "0.10"

# JSON utilities
json_value_merge = "2.0"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

# HTTP clients and servers
reqwest = { version = "0.12", features = ["json","rustls-tls-native-roots"] }
tide = "0.16"
http-types = "2.12"
surf = "2.3"

# DNS
hickory-resolver = { version = "0.24", features = ["dns-over-rustls"] }

# Random
rand = "0.8"

# Other
backtrace = "0.3"
casbin = { version = "2.9", features = ["logging","explain"] }
nvml-wrapper = "0.10"
bip39 = "2.0"
cfg-if = "1.0"

# Internal workspace dependencies
buckyos-kit = { path = "./buckyos-kit" }
buckyos-tracing = { path = "./buckyos-tracing" }
name-lib = { path = "./name-lib" }
name-client = { path = "./name-client" }
kRPC = { path = "./kRPC" }
rbac = { path = "./rbac" }
debug-lib = { path = "./debug-lib" }

# Dev dependencies
tempfile = "3.23.0"

