[package]
name = "buckyos-kit"
version = "0.5.1"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = { workspace = true }

[dependencies]
thiserror = { workspace = true }
sysinfo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json_value_merge = { workspace = true }
toml = { workspace = true }
serde_yaml_ng = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
simplelog = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
async-recursion = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
