[package]
name = "buckyos-tracing"
version = "0.4.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
tracing-appender = { workspace = true }
console-subscriber = { workspace = true }
buckyos-kit = { workspace = true }
chrono = { workspace = true }