[package]
name = "kRPC"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
tokio = { version = "1", features = ["full"] }
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
openssl = { version = "*", features = ["vendored"] }
reqwest = {version = "*", features = ["json","rustls-tls-native-roots"]}
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

buckyos-kit = { path = "../buckyos-kit" }
name-lib = { path = "../name-lib" }
rbac = { path = "../rbac" }