[package]
name = "name-client"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["persistence"]
cloudflare = []
persistence = ["dep:redb"]
metrics = ["dep:metrics"]

[dependencies]
toml = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
dashmap = "6"
bincode = "1"
redb = { version = "2", optional = true }
metrics = { version = "0.24", optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
hickory-resolver = { workspace = true }
tokio = { workspace = true }
mini-moka = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
cfg-if = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

name-lib = { workspace = true }
buckyos-kit = { workspace = true }
kRPC = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
