[package]
name = "name-lib"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
hickory-resolver = { workspace = true }
tokio = { workspace = true }
mini-moka = { workspace = true }
jsonwebtoken = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519_to_curve25519 = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
nvml-wrapper = { workspace = true }
toml = { workspace = true }
buckyos-kit = { workspace = true }

# for mnemonic -> seed and SLIP-0010 derivation
bip39 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

[features]
config_tests = []

