[package]
name = "rbac"
version.workspace = true
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
casbin = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
buckyos-kit = { workspace = true }
